fixing escape / causing compile issues

--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,8 @@
   background: rgb(199, 199, 199);
   border-radius: 4px;
 }
-*/ .example::-webkit-scrollbar {
+/* Scroll Bar */
+.example::-webkit-scrollbar {
   display: none;
 }
 .App-header {
