commiting all frontend changes in landing page

--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
   pointer-events: none;
 }
 .landing {
-  font-family: "Plus Jakarta Sans", sans-serif;
+  /* font-family: "Plus Jakarta Sans", sans-serif; */
   font-optical-sizing: auto;
   scroll-behavior: smooth;
 }
