--- a/src/styles/feed.css
+++ b/src/styles/feed.css
@@ -14,26 +14,27 @@ a {
   gap: 2px;
   padding: 0px 0 0px 0;
   font-size: 20px;
+  background-color: #001d3d;
 }
 .feed-container {
   display: flex;
   flex-direction: row;
   height: 100%;
   width: 100%;
-  height: 90vh;
+  height: 100vh;
 }
 .feed-part1 {
   height: 100%;
   display: flex;
-  padding: 0px 10px 0px 22px;
+  padding: 0px 20px;
   flex-direction: column;
-  width: 70%;
+  width: 75%;
   overflow-y: auto;
 }
 .feed-part2 {
-  width: 30%;
+  width: 25%;
   overflow-y: auto;
-  padding: 0px 22px 0px 10px;
+  padding: 0px 20px;
   height: 100%;
 }
 .recent-predictions {
@@ -41,11 +42,15 @@ a {
 .rp-heading {
   display: flex;
   padding: 12px 0;
+  font-family: "Poppins", sans-serif;
+  font-size: 32px;
+  font-weight: 600;
+  color: #003580;
 }
 .rp-cards {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 16px;
 }
 /* Feed Cards CSS Start */
 
@@ -103,7 +108,7 @@ a {
   .feed-card {
     padding: 16px;
     border-radius: 0px;
-    background: #262626;
+    background: #ffffff20;
   }
   .profile-name h5 {
     color: #fff;
