--- a/src/App.css
+++ b/src/App.css
@@ -150,3 +150,9 @@
   padding: 14px 8px !important;
   color: white !important;
 }
+
+.css-3bmhjh-MuiPaper-root-MuiPopover-paper {
+  background-color: #001d3d70 !important;
+  backdrop-filter: blur(10px);
+  border-radius: 16px !important;
+}
