commiting some final fixes in landing page and dashboard

--- a/src/App.css
+++ b/src/App.css
@@ -153,7 +153,7 @@
 
 .css-3bmhjh-MuiPaper-root-MuiPopover-paper {
   background-color: #001d3d70 !important;
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px) !important;
   border-radius: 16px !important;
 }
 
