--- a/src/index.css
+++ b/src/index.css
@@ -86,7 +86,7 @@ code {
 .ant-drawer .ant-drawer-body {
   background: var(--primary-color) !important;
 }
-.custom-popper .MuiPaper-root {
+.css-3bmhjh-MuiPaper-root-MuiPopover-paper {
   background-color: #001d3d70 !important;
   backdrop-filter: blur(10px) !important;
   border-radius: 16px !important;
