--- a/src/styles/feed.css
+++ b/src/styles/feed.css
@@ -16,13 +16,13 @@ a {
   font-size: 20px;
   background-color: #001d3d;
 }
-.feed-container {
+/* .feed-container {
   display: flex;
   flex-direction: row;
   height: 100%;
   width: 100%;
   height: 100vh;
-}
+} */
 .feed-part1 {
   height: 100%;
   display: flex;
@@ -32,8 +32,6 @@ a {
   overflow-y: auto;
 }
 
-.recent-predictions {
-}
 .rp-heading {
   display: flex;
   padding: 12px 0;
@@ -51,8 +49,7 @@ a {
 
 /* Feed Card CSS End */
 /* Top Predictors CSS Start */
-.top-predictors {
-}
+
 .top-predictors-header,
 .trending-predictions-header {
   display: flex;
@@ -72,12 +69,13 @@ a {
 @media (max-width: 1023px) {
   .feed-section {
     width: 100%;
+    height: 100%;
   }
-  .feed-container {
+  /* .feed-container {
     flex-direction: column;
     height: 100%;
     width: 100%;
-  }
+  } */
   .feed-part1 {
     height: 100%;
     width: 100%;
